<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Asio</name>
  <version>1.0.0</version>
  <description>
     "Asio"
  </description>
  <maintainer email="miguelcompany@eprosima.com">Miguel Company</maintainer>
  <maintainer email="eduardoponz@eprosima.com">Eduardo Ponz</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-DDS/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-DDS</url>

  <buildtool_depend>cmake</buildtool_depend>
  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
